# wavis-helloworld

./: .gitignore  CHANGELOG.md  DEV-KNOWLEDGE.md  LICENSE  README-SCRIPTS.md  README.md  ROADMAP.md  demeter-deploy.sh  demeter-implement.sh  demeter-init.sh  demeter-iterate.sh  demeter-master.sh  demeter-setup.sh  demeter-uow-executor.sh  package.json  pyproject.toml  setup.py  setup.sh  ssot-verification.html  ssot-verification.json  test-requirements.md  traceability-matrix.json  traceability-report.html
.github/workflows/: knowledge-accumulation.yaml  ssot-pipeline.yaml
DontPressButton/: ACCESSIBILITY-VALIDATION-REPORT.md  CLAUDE.md  CONSTITUTIONAL-COMPLIANCE-REPORT.md  CONSTITUTIONAL_COMPLIANCE_REPORT.md  PROJECT-constitution.yaml  README.md  UOW-001-COMPLETION-SUMMARY.md  UOW-004_COMPLETION_REPORT.md  UOW-006_COMPLETION_REPORT.md  UOW-007_COMPLETION_REPORT.md  merged-ssot.yaml  package-lock.json  package.json  playwright.config.js
DontPressButton/.demeter/: DEPLOYMENT_WORKFLOW.prompt  IMPLEMENTATION_WORKFLOW.prompt  SETUP_COMPLETE.md  SETUP_WORKFLOW.prompt
DontPressButton/batch/: execution-plan.yaml
DontPressButton/config/: app.config.json
DontPressButton/playwright-report/: index.html
DontPressButton/src/: index.html
DontPressButton/test-results/: .last-run.json  constitutional-compliance.json
DontPressButton/test-results/e2e-user-journey-UoW-006-C-2ed38-ity-throughout-user-journey-chromium-desktop/: error-context.md
DontPressButton/test-results/e2e-user-journey-UoW-006-C-5a30b-r-journey-with-No-selection-chromium-desktop/: video.webm
DontPressButton/test-results/e2e-user-journey-UoW-006-C-d74a6--markers-throughout-journey-chromium-desktop/: video.webm
DontPressButton/tests/: setup.js
DontPressButton/tests/accessibility/: a11y.test.js
DontPressButton/tests/e2e/: uow-001-layout.spec.js  uow-002-state-management.spec.js  uow-003-modal.spec.js  uow-004-modal-actions.spec.js  uow-005-configuration.spec.js  uow-007-nuclear-button.spec.js  user-journey.spec.js
DontPressButton/tests/integration/: configuration.test.js  html-structure.test.js  layout-foundation.test.js  modal-actions.test.js  modal-behavior.test.js  nuclear-button.test.js
DontPressButton/tests/performance/: interaction.test.js
DontPressButton/tests/unit/: layout-basic.test.js
demeter/: README.md  meta-config.yaml  setup-automation.sh  wavis-setup.py
demeter/batch/: INTEGRATION-GUIDE.md  README.md  README.md.template  tdd-progress.md  uow-batch-runner.md  uow-tdd-executor.md
demeter/batch/execution-plans/: execution-plan.yaml
demeter/claude/: mcp-server.py
demeter/core/: sonar-project.properties
demeter/core/docker/: docker-compose.yml.template
demeter/core/graphrag/scripts/: setup-graphrag.sh.template
demeter/core/graphrag/templates/: .env.template  settings.yaml.template
demeter/core/prompts/: README.md
demeter/core/prompts/templates/: ai-refinement.prompt.template  bdd-feature-generation.prompt.template  constitution-validator.prompt.template  constitution.prompt.template  deployment-workflow.prompt.template  executable-spec.prompt.template  graphrag-index.prompt.template  graphrag-query.prompt.template  implementation-workflow.prompt.template  integrated-master-workflow.prompt.template  iterate-workflow.prompt.template  nlp-to-ssot.prompt.template  project-init.prompt.template  requirements-analysis.prompt.template  sdd-plan.prompt.template  sdd-specification.prompt.template  sdd-tasks.prompt.template  setup-workflow.prompt.template  spec-to-code.prompt.template  ssot-generation.prompt.template  ssot-indexer.prompt.template  ssot-merge.prompt.template  ssot-verification.prompt.template  tdd-executor.prompt.template
demeter/core/prompts/workflows/: complete-init.workflow.md  sdd-advanced-workflow.md  sdd-workflow.md  tdd-cycle.workflow.md
demeter/core/ssot/: EXTENSION-GUIDE.md  README.md  compatibility-matrix.yaml  extension-presets.yaml  framework-requirements.yaml  mvp-definition.yaml  risk-registry.yaml  uow-tracker.yaml
demeter/core/ssot/base/: fr-base.yaml  nfr-base.yaml  uow-base.yaml
demeter/core/ssot/config/: domain-patterns.yaml
demeter/core/ssot/contracts/: contract-schema.yaml  generate-contract.py  uow-001-contract.yaml
demeter/core/ssot/custom/: .gitkeep
demeter/core/ssot/prompts/: analyze-requirements.md  generate-prompt.py  merge-workflow.md  nlp-conversion-guide.md  template-generation-guide.md  templates.yaml
demeter/core/ssot/templates/: CLAUDE.md.template  LEARNING.md.template  SSOT.md.template  command.md.template  uow-yaml.template
demeter/core/ssot/tools/: README.md  analyze-requirements.py  generate-analysis-prompt.py  generate-template.py  merge-ssot.py  nlp-to-custom-ssot.py
demeter/dashboard/: app.py
demeter/docs/: LIFECYCLE.md  docker-compose-example.md
demeter/examples/: complete-workflows.md
demeter/features/: uow_000.feature  uow_001.feature  uow_001a.feature  uow_001b.feature  uow_001c.feature  uow_001d.feature  uow_002.feature  uow_003.feature  uow_101.feature  uow_102.feature  uow_103.feature  uow_104.feature  uow_105.feature  uow_106.feature  uow_107.feature  uow_201.feature  uow_202.feature  uow_210.feature
demeter/guides/: getting-started.md  quick-reference.md
demeter/prompts/: README.md  phase0-project-init.md  phase1-2-ssot-management.md  phase3-5-development.md  phase6-quality-verification.md  phase7-deployment.md
demeter/prompts/tools/: agent-collaboration.md  deployment-security.md  dev-knowledge-operations.md  docker-compose-deployment.md  kubernetes-deployment.md  quality-checks.md  ssot-operations.md  uow-management.md
demeter/references/: README.md
demeter/templates/new-project/: CLAUDE.md.template
docs/: requirement.md
samples/rock-paper-scissors/: .gitignore  CLAUDE.md  LEARNING.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  tsconfig.json
samples/rock-paper-scissors/docs/: SSOT.md
samples/rock-paper-scissors/src/: index.ts
samples/rock-paper-scissors/tests/: computer-player.test.ts  game-types.test.ts  game.test.ts
(+59 files in other folders)
